--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,5 @@
 <% layout("/layouts/boilerplate")%>
-  <style>
+  <!-- <style>
     #filters{
       display: flex;
       flex-wrap: wrap;
@@ -30,12 +30,12 @@
       display: flex;
       align-items: center;
     }
-  </style>
+  </style> -->
 
 
 
 
-<div id="filters">
+<!-- <div id="filters">
   <div class="filters">
     <div><i class="fa-solid fa-fire"></i></div>
     <p>Trending</p>
@@ -85,7 +85,7 @@
       <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
       <label class="form-check-label" for="flexSwitchCheckDefault">Display Total After Taxes</label>
     </div>
-  </div>
+  </div> -->
 
 </div>
 <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 mt-3">
@@ -116,7 +116,7 @@
     <%}%>
 
 </div>
-<script>
+<!-- <script>
   let taxSwitch = document.getElementById("flexSwitchCheckDefault");
   taxSwitch.addEventListener("click",()=>{
 let taxInfo = document.getElementsByClassName("tax-info");
@@ -129,5 +129,5 @@ for(info of taxInfo){
 
 }
   })
-</script>  
+</script>   -->
 
